# linux_audio_design

./: .gitignore  CMakeLists.txt  README.md
include/: audio_filter.h  read_wav_file.h  wav_type.h  write_wav_file.h
src/: audio_filter.cpp  audio_gain.cpp  filter_test.cpp  read_wav_file.cpp  realtime_audio.cpp  write_wav_file.cpp
